Downgrade language level to java 11
Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>